--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -184,6 +184,11 @@
   color:#6b4e31;
 }
 
+.success-message p {
+  margin-bottom: 2.5rem; /* 👈 creates space above button */
+}
+
+
 /* ===================================================== */
 /* RESPONSIVE                                           */
 /* ===================================================== */
