--- a/src/components/LanguageDropdown.css
+++ b/src/components/LanguageDropdown.css
@@ -1,8 +1,10 @@
 .lang-dropdown {
   position: fixed;      /* 🔒 does NOT affect header layout */
   top: 18px;
-  right: 22px;
+  right: 18px;
   z-index: 9999;
+  display: flex;
+  align-items: center;
 }
 
 .lang-dropdown select {
