--- a/src/pages/Media.css
+++ b/src/pages/Media.css
@@ -4,7 +4,7 @@
 
 .media-page {
   min-height: 100vh;
-  background: #384852;
+  background: #26343a;
   color: #EAF1FF;
   font-family: "Georgia", serif;
   display: flex;
